--- a/ui/src/components/formik/cron.css
+++ b/ui/src/components/formik/cron.css
@@ -10,7 +10,8 @@
   list-style: none;
 }
 
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
   color: #495057;
   background-color: #fff;
   border-color: #dee2e6 #dee2e6 #fff;
